[BZ #6824]

2008-08-07  Ulrich Drepper  <drepper@redhat.com>
	[BZ #6824]
	* sysdeps/unix/sysv/linux/powerpc/bits/mathinline.h: Use correct
	macro to detect use of 128 bit long double.
	Patch by Ryan S. Arnold <rsa@us.ibm.com>.